feat: 实现商品和秒杀活动管理
